adding some things

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> Fridge </title>
+    <title> Fridge. </title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Fridge_v1.css">
+    <link rel="stylesheet" href="Fridge_v2.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -79,7 +79,7 @@
 
   <script>    
   var myHeading = document.querySelector('h1');
-  myHeading.textContent = 'Fridge';
+  myHeading.textContent = 'Fridge.';
       
     myHeading.style.fontSize = "500%";
     myHeading.style.fontFamily = "Yeseva One";
