--- a/Website/html/login.html
+++ b/Website/html/login.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta charset="utf-8"/>
     <title>Fridge</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style-login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $(document).ready(function() {
