Fixed the landing page

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -4,7 +4,7 @@
     <title> Fridge. </title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Fridge_v2.css">
+    <link rel="stylesheet" href="../css/Fridge_v2.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -38,7 +38,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="geometry.png" alt="fact">
+      <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>The Problem</h3>
         <p>Forgetting what's in your fridge is a big contributor to household foodwaste</p>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="item">
-      <img src="geometry.png" alt="fact">
+      <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>The App</h3>
         <p>Fridge easily helps you track what's in your fridge at any given moment</p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="item">
-      <img src="geometry.png" alt="fact">
+      <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>It's Easy</h3>
         <p>1. Upload your receipts <br>2.   Update when you've used the item</p>
