--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -41,7 +41,7 @@
       <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>The Problem</h3>
-        <p>Forgetting what's in your fridge is a big contributor to household foodwaste</p>
+        <p>Forgetting what's in your fridge is a big contributor to household foodwaste.</p>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
       <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>The App</h3>
-        <p>Fridge easily helps you track what's in your fridge at any given moment</p>
+        <p>Fridge easily helps you track what's in your fridge at any given moment.</p>
       </div>
     </div>
 
