linked landing page to login

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -15,7 +15,7 @@
   </head>
 <body>
      <nav id="login">
-           <button type="button" class="btn btn-default">Login / Sign Up </button>   
+           <button type="button" class="btn btn-default"><a href="login.html">Login / Sign Up </a></button>   
      </nav>
     <div id="heading">
     <h1 id="title"></h1>
