--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -13,7 +13,7 @@
 
     <div class="fridge_container">
 
-            <a class="btn btn-success" href="#success" data-toggle="modal"><span id="steak"> <img class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span></a>
+            <a class="btn btn-meats" href="#success" data-toggle="modal"><span id="steak"> <img class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -31,7 +31,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-primary" href="#primary" data-toggle="modal"><span id="toast"> <img class="glyphicon glyphicon-pushpin" src="../images/toast.png" alt="grain"/></span></a>
+            <a class="btn btn-wheat" href="#primary" data-toggle="modal"><span id="toast"> <img class="glyphicon glyphicon-pushpin" src="../images/toast.png" alt="grain"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -49,7 +49,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-info" href="#info" data-toggle="modal"><span id="milk"> <img class="glyphicon glyphicon-pushpin" src="../images/milk.png" alt="dairy"/></span></a>
+            <a class="btn btn-dairy" href="#info" data-toggle="modal"><span id="milk"> <img class="glyphicon glyphicon-pushpin" src="../images/milk.png" alt="dairy"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -67,7 +67,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-warning" href="#warning" data-toggle="modal"><span id="apple"> <img class="glyphicon glyphicon-pushpin" src="../images/apple.png" alt="fruit"/></span></a>
+            <a class="btn btn-fruits" href="#warning" data-toggle="modal"><span id="apple"> <img class="glyphicon glyphicon-pushpin" src="../images/apple.png" alt="fruit"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -85,7 +85,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-danger" href="#danger" data-toggle="modal"><span id="cabbage"> <img class="glyphicon glyphicon-pushpin" src="../images/cabbage.png" alt="veggies"/></span></a>
+            <a class="btn btn-vegetables" href="#danger" data-toggle="modal"><span id="cabbage"> <img class="glyphicon glyphicon-pushpin" src="../images/cabbage.png" alt="veggies"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="danger" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
