Added logout functionality to fridgep3.html

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -12,7 +12,7 @@
 
 
     <div class="fridge_container">
-
+        <a href="./login.html"><img id="logout" src="../images/exit.png" alt="logout"></a>
             <a class="btn btn-meats" href="#success" data-toggle="modal"><span id="steak"> <img class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span></a>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
