adding some changes

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -48,7 +48,7 @@
       <img src="../images/geometry.png" alt="fact">
       <div class="carousel-caption">
         <h3>The App</h3>
-        <p>Fridge easily helps you track what's in your fridge at any given moment.</p>
+        <p>Fridge. easily helps you track what's in your fridge at any given moment.</p>
       </div>
     </div>
 
@@ -70,6 +70,7 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
+
 </div>
 
 
