changed slogan background to be inline and not block

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -20,11 +20,10 @@
     <div id="heading">
     <h1 id="title"></h1>
     </div>
-    <div id = "heading2">
-            <h2> See what's in your fridge. Anywhere, anytime.</h2>
+    
+    <div class="centerHeader">
+      <span id="heading2">See what's in your fridge. Anywhere, anytime.</span>
     </div>
-
-
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
