--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -13,7 +13,7 @@
 
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit.png" alt="logout"></a>
-            <a class="btn btn-meats" href="#success" data-toggle="modal"><span id="steak"> <img class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span></a>
+            <span id="steak"><img class="btn btn-meats" href="#success" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -31,7 +31,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-wheat" href="#primary" data-toggle="modal"><span id="toast"> <img class="glyphicon glyphicon-pushpin" src="../images/toast.png" alt="grain"/></span></a>
+            <span id="toast"> <img class="btn btn-wheat" href="#primary" data-toggle="modal"class="glyphicon glyphicon-pushpin" src="../images/toast.png" alt="grain"/></span>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -49,7 +49,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-dairy" href="#info" data-toggle="modal"><span id="milk"> <img class="glyphicon glyphicon-pushpin" src="../images/milk.png" alt="dairy"/></span></a>
+            <span id="milk"> <img class="btn btn-dairy" href="#info" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/milk.png" alt="dairy"/></span>
             <!-- Modal -->
             <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -67,7 +67,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-fruits" href="#warning" data-toggle="modal"><span id="apple"> <img class="glyphicon glyphicon-pushpin" src="../images/apple.png" alt="fruit"/></span></a>
+            <span id="apple"> <img class="btn btn-fruits" href="#warning" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/apple.png" alt="fruit"/></span>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -85,7 +85,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <a class="btn btn-vegetables" href="#danger" data-toggle="modal"><span id="cabbage"> <img class="glyphicon glyphicon-pushpin" src="../images/cabbage.png" alt="veggies"/></span></a>
+            <span id="cabbage"> <img class="btn btn-vegetables" href="#danger" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/cabbage.png" alt="veggies"/></span>
             <!-- Modal -->
             <div class="modal fade" id="danger" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -104,6 +104,10 @@
             </div><!-- /.modal -->
             <!-- Modal -->
         </div>
-
+<script>
+        $("#btn").click(function() {
+            $('.shake').toggleClass('shake-active');
+          });
+</script>
 </body>
 </html>
