--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -23,7 +23,7 @@
 
     <div class="centerHeader">
       <span id="heading2">See what's in your fridge. Anywhere, anytime.</span>
-      <h2> test test </h2>
+      <h2> test test test </h2>
     </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
