--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -9,7 +9,7 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
   </head>
   
-  <body background="../images/empty_fridge_editted.png">
+  <body>
 
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit.png" alt="logout"></a>
