ade a few changes

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -14,16 +14,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 <body>
+
      <nav id="login">
            <button type="button" class="btn btn-default"><a href="login.html">Login / Sign Up </a></button>
      </nav>
     <div id="heading">
+      <h1> FridgedIt </h1>
     <h1 id="title"></h1>
     </div>
 
     <div class="centerHeader">
       <span id="heading2">See what's in your fridge. Anywhere, anytime.</span>
-      <h2> test test test </h2>
     </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -72,39 +73,39 @@
   </a>
 
 </div>
+<script>
+    var myHeading = document.querySelector('h1');
+    myHeading.textContent = 'Fridge.';
 
+      myHeading.style.fontSize = "500%";
+      myHeading.style.fontFamily = "Yeseva One";
+      myHeading.style.fontWeight = "bold";
+      myHeading.style.textShadow = "-2px 0 white, 0 2px white, 2px 0 white, 0 -2px white";
 
+    myHeading.onmouseover = function() {mouseOver()};
 
+    myHeading.onmouseout = function() {mouseOut()};
 
+    function mouseOver() {
+      myHeading.style.color = "black";
+      /**myHeading.style.color = "#008B8B"; **/
+      myHeading.style.fontSize = "500%";
+      myHeading.style.fontFamily = "Yeseva One";
+      myHeading.style.fontWeight = "bold";
+    }
 
-  <script>
-  var myHeading = document.querySelector('h1');
-  myHeading.textContent = 'Fridge.';
+    function mouseOut() {
+      /**the subtle patternmyHeading.style.color = "#FFD700";**/
+      myHeading.style.color = "black";
+      myHeading.style.fontSize = "500%";
+      myHeading.style.fontWeight = "bold";
 
-    myHeading.style.fontSize = "500%";
-    myHeading.style.fontFamily = "Yeseva One";
-    myHeading.style.fontWeight = "bold";
-    myHeading.style.color = "black";
-    myHeading.style.textShadow = "-2px 0 white, 0 2px white, 2px 0 white, 0 -2px white";
-
-  myHeading.onmouseover = function() {mouseOver()};
-
-  myHeading.onmouseout = function() {mouseOut()};
-
-  function mouseOver() {
-    myHeading.style.color = "black";
-    /**myHeading.style.color = "#008B8B"; **/
-    myHeading.style.fontSize = "500%";
-    myHeading.style.fontFamily = "Yeseva One";
-    myHeading.style.fontWeight = "bold";
-  }
-
-  function mouseOut() {
-    /**the subtle patternmyHeading.style.color = "#FFD700";**/
-    myHeading.style.color = "black";
-    myHeading.style.fontSize = "500%";
-    myHeading.style.fontWeight = "bold";
-
-  }
+    }
 </script>
+
+
+
+
+
+
 </body>
