pg3 html/css Mobile Media Query

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -7,13 +7,14 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
   <body>
 
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit.png" alt="logout"></a>
-            <span id="steak"><img class="btn btn-meats" href="#success" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/steak.png" alt="meat"/></span>
+            <span class="" id="steak"><img class="btn btn-meats img-resize" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/></span>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -31,7 +32,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span id="toast"> <img class="btn btn-wheat" href="#primary" data-toggle="modal"class="glyphicon glyphicon-pushpin" src="../images/toast.png" alt="grain"/></span>
+            <span class="" id="toast"> <img class="btn btn-wheat img-resize" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/></span>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -49,7 +50,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span id="milk"> <img class="btn btn-dairy" href="#info" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/milk.png" alt="dairy"/></span>
+            <span class="" id="milk"> <img class="btn btn-dairy img-resize" href="#info" data-toggle="modal" src="../images/milk.png" alt="dairy"/></span>
             <!-- Modal -->
             <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -67,7 +68,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span id="apple"> <img class="btn btn-fruits" href="#warning" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/apple.png" alt="fruit"/></span>
+            <span class="" id="apple"> <img class="btn btn-fruits img-resize" href="#warning" data-toggle="modal" src="../images/apple.png" alt="fruit"/></span>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -85,7 +86,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span id="cabbage"> <img class="btn btn-vegetables" href="#danger" data-toggle="modal" class="glyphicon glyphicon-pushpin" src="../images/cabbage.png" alt="veggies"/></span>
+            <div class="" id="cabbage"> <img class="btn btn-vegetables img-resize" href="#danger" data-toggle="modal" src="../images/cabbage.png" alt="veggies"/></div>
             <!-- Modal -->
             <div class="modal fade" id="danger" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
