Completed mobile media query pg3.html/css

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -14,7 +14,7 @@
 
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit.png" alt="logout"></a>
-            <span class="" id="steak"><img class="btn btn-meats img-resize" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/></span>
+            <img id="steak" class="btn btn-meats resize" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -32,7 +32,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span class="" id="toast"> <img class="btn btn-wheat img-resize" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/></span>
+            <img id="toast" class="btn btn-wheat resize" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -50,7 +50,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span class="" id="milk"> <img class="btn btn-dairy img-resize" href="#info" data-toggle="modal" src="../images/milk.png" alt="dairy"/></span>
+            <img id="milk" class="btn btn-dairy resize" href="#info" data-toggle="modal" src="../images/milk.png" alt="dairy"/>
             <!-- Modal -->
             <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -68,7 +68,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <span class="" id="apple"> <img class="btn btn-fruits img-resize" href="#warning" data-toggle="modal" src="../images/apple.png" alt="fruit"/></span>
+            <img id="apple" class="btn btn-fruits resize" href="#warning" data-toggle="modal" src="../images/apple.png" alt="fruit"/>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -86,7 +86,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <div class="" id="cabbage"> <img class="btn btn-vegetables img-resize" href="#danger" data-toggle="modal" src="../images/cabbage.png" alt="veggies"/></div>
+            <img id="cabbage" class="btn btn-vegetables resize" href="#danger" data-toggle="modal" src="../images/cabbage.png" alt="veggies"/>
             <!-- Modal -->
             <div class="modal fade" id="danger" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
