--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -21,6 +21,9 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header modal-header-meats">
+                            <button type="button" class="display-data">Get Data</button>
+                            <button type="button" class="display-users">Get Users</button>
+                            <button type="button" class="display-foods">Get Food Items</button>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i class="glyphicon glyphicon-pushpin"></i> Meats</h1>
                         </div>
@@ -106,19 +109,31 @@
             </div><!-- /.modal -->
             <!-- Modal -->
         </div>
-<script>
-    $('btn').click(function(){
-        var $ele = $(this);
-        $ele.addClass("btn--click");
-        setTimeout(function(){
-            $ele.removeClass("btn--click");
-        }, 400);
-});
-</script>
+
 <div class="references">Icons made by <a class="references"  href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDATxhUzfa7mcLVwM02Cfrdi6ErXtRHDIg",
+      authDomain: "fridgedit-f8177.firebaseapp.com",
+      databaseURL: "https://fridgedit-f8177.firebaseio.com",
+      projectId: "fridgedit-f8177",
+      storageBucket: "fridgedit-f8177.appspot.com",
+      messagingSenderId: "252806401867"
+    };
+    firebase.initializeApp(config);
+  </script>
+ 
+<script src="//unpkg.com/navigo@6"></script>
+
+<script src="/scripts/Fridge.js"></script>
+<script src="/scripts/index1.js"></script>
 </body>
 </html>
