--- a/Website/html/login.html
+++ b/Website/html/login.html
@@ -68,10 +68,10 @@
     
 
      <div class="login-form">
-        <form id="registration1">
-            <img class="img" src="../images/email.png" alt="Email"><span>&emsp;</span><input type="email" placeholder="Email Address" class="input" required="required"><br>
-            <img class="img" src="../images/key.png" alt="Key"><span>&emsp;</span><input type="password" placeholder="Password" class="input" required="required"><br>
-            <input type="submit" value="Login" id="btnLogin">
+        <form id="registration1" onsubmit="return onLogin();">
+            <img class="img" src="../images/email.png" alt="Email"><span>&emsp;</span><input type="email" placeholder="Email Address" id="login-email" class="input" required="required"><br>
+            <img class="img" src="../images/key.png" alt="Key"><span>&emsp;</span><input type="password" placeholder="Password" id="login-pass" class="input" required="required"><br>
+            <button type="submit" value="Login" id="btnLogin"></button>
             <span><a href="#">Forgot Password</a></span>
         </form>
      </div>
@@ -168,6 +168,7 @@
   };
   firebase.initializeApp(config);
     </script>
-    <script src = "index1.js"></script>
+    <script src = "../scripts/index1.js"></script>
+    <script src="../scripts/Fridge.js"></script>
 </body>
 </html>
