updated to a funcitoning login/sign up page

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/Fridge_v2.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
@@ -19,7 +20,7 @@
            <button type="button" class="btn btn-default"><a href="login.html">Login / Sign Up </a></button>
      </nav>
     <div id="heading">
-      <h1> FridgedIt </h1>
+      <h1> Fridged-it </h1>
     <h1 id="title"></h1>
     </div>
 
@@ -73,14 +74,15 @@
   </a>
 
 </div>
-<script>
+<!--<script>
     var myHeading = document.querySelector('h1');
-    myHeading.textContent = 'Fridge.';
+    myHeading.textContent = 'Fridged-it.';
 
       myHeading.style.fontSize = "500%";
-      myHeading.style.fontFamily = "Yeseva One";
+      myHeading.style.color = "#b3b3b3"
+      myHeading.style.fontFamily = 'Fredoka One', cursive;
       myHeading.style.fontWeight = "bold";
-      myHeading.style.textShadow = "-2px 0 white, 0 2px white, 2px 0 white, 0 -2px white";
+      myHeading.style.textShadow = "-2px black, 0 2px black, 2px 0 black, 0 -2px black";
 
     myHeading.onmouseover = function() {mouseOver()};
 
@@ -101,7 +103,7 @@
       myHeading.style.fontWeight = "bold";
 
     }
-</script>
+</script>-->
 
 
 
