Added delete button functionality

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -28,6 +28,7 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i class="glyphicon glyphicon-pushpin"></i> Meats</h1>
                             <span class="edit-button">Edit</span>
+                            <span class="delete-button">Delete</span>
                         </div>
                         <div class="modal-body-meats">
                         </div>
@@ -68,6 +69,7 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i class="glyphicon glyphicon-pushpin"></i> Dairy</h1>
                             <span class="edit-button">Edit</span>
+                            <span class="delete-button">Delete</span>
                         </div>
                         <div class="modal-body-dairy">
                         </div>
@@ -140,10 +142,9 @@
     };
     firebase.initializeApp(config);
   </script>
- 
-<script src="//unpkg.com/navigo@6"></script>
-
 <script src="/scripts/Fridge.js"></script>
 <script src="/scripts/index1.js"></script>
+<script src="//unpkg.com/navigo@6"></script>
+
 </body>
 </html>
