lot's of new features!

--- a/Website/html/Fridge_v2.html
+++ b/Website/html/Fridge_v2.html
@@ -20,7 +20,7 @@
            <button type="button" class="btn btn-default"><a href="login.html">Login / Sign Up </a></button>
      </nav>
     <div id="heading">
-      <h1> Fridged-it </h1>
+      <h1> <i> <span> fridged-it </span> </i> </h1>
     <h1 id="title"></h1>
     </div>
 
