--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -5,22 +5,28 @@
     <meta charset="utf-8"/>
     <link href="../css/fridgepg3.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- <script src="/scripts/Fridge.js"></script>
+    <script src="index1.js"></script> -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
-  
+
   <body>
 
+
     <div class="fridge_container">
-        <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout"></a>
+        <img id="logout" src="../images/exit_swing.png" alt="logout" onclick = "logOut()"></a>
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header modal-header-meats">
+                            <button type="button" class="display-data">Get Data</button>
+                            <button type="button" class="display-users">Get Users</button>
+                            <button type="button" class="display-foods">Get Food Items</button>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i class="glyphicon glyphicon-pushpin"></i> Meats</h1>
                         </div>
@@ -106,14 +112,35 @@
             </div><!-- /.modal -->
             <!-- Modal -->
         </div>
-<script>
-    $('btn').click(function(){
-        var $ele = $(this);
-        $ele.addClass("btn--click");
-        setTimeout(function(){
-            $ele.removeClass("btn--click");
-        }, 400);
-});
-</script>
+
+<div class="references">Icons made by <a class="references"  href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div class="references">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div class="references">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+
+
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
+
+<!-- <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDATxhUzfa7mcLVwM02Cfrdi6ErXtRHDIg",
+      authDomain: "fridgedit-f8177.firebaseapp.com",
+      databaseURL: "https://fridgedit-f8177.firebaseio.com",
+      projectId: "fridgedit-f8177",
+      storageBucket: "fridgedit-f8177.appspot.com",
+      messagingSenderId: "252806401867"
+    };
+    firebase.initializeApp(config);
+  </script> -->
+<!-- <script src="index1.js"></script> -->
+<script src="/scripts/Fridge.js"></script>
+<script src="//unpkg.com/navigo@6"></script>
+
+
+
 </body>
 </html>
