Styled icons and modals in web and mobile webqueries

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -15,6 +15,8 @@
 
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout"></a>
+        <img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/>
+        <img id="plus" class="btn resize hover" data-toggle="modal" src="../images/plus.png" alt="manually add foods"/>
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -32,7 +34,7 @@
                         </div>
                         <div class="modal-body-meats">
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-meats">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -52,7 +54,7 @@
                         </div>
                         <div class="modal-body-grains">
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-grains">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -73,7 +75,7 @@
                         </div>
                         <div class="modal-body-dairy">
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-dairy">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -93,7 +95,7 @@
                         </div>
                         <div class="modal-body-fruits">
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-fruits">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -113,7 +115,7 @@
                         </div>
                         <div class="modal-body-vegetables">
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-vegetables">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -127,7 +129,6 @@
 <div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="references">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
 <script>
